Add option to build just Webviz (#426)
+ a Docker image that has just Webviz installed in it.

There have been multiple requests for something like this, especially
from people who want to use Webviz in situations with limited internet
connectivity. See e.g. #120, #267, and #406.

I’ve also renamed the current Dockerfile.

I’ll follow up with another PR that updates the README to explain how to
use the new Docker image once I’ve figured out how to set up automated
Docker builds.

Test plan: tested this locally. There’s some risk of this getting out of
sync since we don’t run this in CI, but hopefully with the automated
Docker build which I’ll set up later we’ll at least get some coverage on
this flow.

--- a/Dockerfile-webviz-ci
+++ b/Dockerfile-webviz-ci
@@ -4,6 +4,7 @@
 # found in the LICENSE file in the root directory of this source tree.
 # You may not use this file except in compliance with the License.
 
+# This is just for use in CI, as well as the base image for our proprietary version.
 # This container is published at https://hub.docker.com/r/cruise/webviz-ci.
 
 FROM node:10.16-slim
