--- a/Dockerfile-static-webviz
+++ b/Dockerfile-static-webviz
@@ -7,27 +7,44 @@
 # This is a static build of just the Webviz application.
 # This container is published at https://hub.docker.com/r/cruise/webviz.
 
-FROM node:10.22-slim
+FROM node:10.22 AS builder
 
-# Install some general dependencies for stuff below and for CircleCI;
-# https://circleci.com/docs/2.0/custom-images/#required-tools-for-primary-containers
-RUN apt-get update && apt-get install -yq gnupg libgconf-2-4 wget git ssh --no-install-recommends
+# Copy only the files necessary for installing our package dependencies. This
+# way, if the code is updated but the dependencies are the same, we can still
+# re-use the cache to avoid re-installing.
+WORKDIR /app
+COPY lerna.json package.json package-lock.json ./
+COPY packages/@cruise-automation/button/package.json \
+     packages/@cruise-automation/button/package-lock.json \
+     packages/@cruise-automation/button/
+COPY packages/@cruise-automation/hooks/package.json \
+     packages/@cruise-automation/hooks/package-lock.json \
+     packages/@cruise-automation/hooks/
+COPY packages/@cruise-automation/tooltip/package.json \
+     packages/@cruise-automation/tooltip/package-lock.json \
+     packages/@cruise-automation/tooltip/
+COPY packages/regl-worldview/package.json \
+     packages/regl-worldview/package-lock.json \
+     packages/regl-worldview/
+COPY packages/webviz-core/package.json \
+     packages/webviz-core/package-lock.json \
+     packages/webviz-core/
 
-# Install dumb-init which helps with proper signal handling.
-RUN apt-get install -y dumb-init
-ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-
-# Copy in the files
-COPY . .
-
-# Delete .gitignore files, so we don't accidentally pollute our image.
-RUN git clean -Xf
-
-# Build the static webviz.
+# Install dependencies
 RUN npm run install-ci
-RUN npm run build
+
+# Copy the rest of the code
+COPY . /app
+
+# Build static webviz
 RUN npm run build-static-webviz
 
-# Start the server.
+# Start again with a clean nginx container
+FROM nginx:1-alpine
+
+# For backwards compatibility, patch the server config to change the port
+RUN sed -i 's/listen  *80;/listen 8080;/g' /etc/nginx/conf.d/default.conf
 EXPOSE 8080
-CMD ["npm", "run", "serve-static-webviz"]
+
+# Copy the build products to the web root
+COPY --from=builder /app/__static_webviz__ /usr/share/nginx/html
