--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "monaco-editor": "0.20.0",
     "monaco-editor-webpack-plugin": "1.9.0",
     "nearley-loader": "^2.0.0",
-    "node-sass": "^4.10.0",
     "polygon-generator": "^1.1.2",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
@@ -103,7 +102,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-terser": "^3.0.0",
-    "sass-loader": "^7.1.0",
+    "sass": "1.32.13",
+    "sass-loader": "10.1.0",
     "seedrandom": "^2.4.4",
     "sinon": "^7.1.1",
     "storycap": "^2.3.5",
